# pydantic2linkml

./: .gitignore  CLAUDE.md  README.md  generate_linkml_from_aind.py  generate_linkml_from_pydantic.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
pydantic2linkml/: exceptions.py  gen_linkml.py  tools.py
src/pydantic2linkml/: __main__.py  exceptions.py  gen_linkml.py  tools.py
src/pydantic2linkml/cli/: __init__.py  tools.py
tests/: test_cli.py  test_converters.py  test_gen_linkml.py  test_tools.py
tests/assets/: mock_module0.py  mock_module1.py
tests/test_pydantic2linkml/: test_gen_linkml.py  test_tools.py
