[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic2linkml"
dynamic = ["version"]
description = 'A tool for translating models expressed in Pydantic to LinkML'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Isaac To", email = "candleindark@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Isaac To/pydantic2linkml#readme"
Issues = "https://github.com/Isaac To/pydantic2linkml/issues"
Source = "https://github.com/Isaac To/pydantic2linkml"

[tool.hatch.version]
path = "src/pydantic2linkml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic2linkml tests}"

[tool.coverage.run]
source_pkgs = ["pydantic2linkml", "tests"]
branch = true
parallel = true
omit = [
  "src/pydantic2linkml/__about__.py",
]

[tool.coverage.paths]
pydantic2linkml = ["src/pydantic2linkml", "*/pydantic2linkml/src/pydantic2linkml"]
tests = ["tests", "*/pydantic2linkml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
