[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic2linkml"
dynamic = ["version"]
description = 'A tool for translating models expressed in Pydantic to LinkML'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"  # todo: Is this the correct license?
keywords = ["LinkML", "Pydantic"]
authors = [
  { name = "Lon Blauvelt", email = "blauvel@ucsc.edu" },
  { name = "Sebastian Urchs", email = "sebastian.urchs@gmail.com" },
  { name = "Satrajit Ghosh", email = "satra@mit.edu" },
  { name = "Isaac To", email = "isaac.chun.to@gmail.com" },
  { name = "Yaroslav Halchenko", email = "debian@onerussian.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "linkml~=1.8",
  "pydantic~=2.7",
  "typer",
]

[project.urls]
Documentation = "https://github.com/DailyDreaming/linkml-aind-model#readme"
Issues = "https://github.com/DailyDreaming/linkml-aind-model/issues"
Source = "https://github.com/DailyDreaming/linkml-aind-model"

[tool.hatch.version]
path = "src/pydantic2linkml/__about__.py"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
python = "3.11"
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
]

[tool.hatch.envs.types]
pyhton = "3.11"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic2linkml tests}"

[tool.coverage.run]
source_pkgs = ["pydantic2linkml", "tests"]
branch = true
parallel = true
omit = [
  "src/pydantic2linkml/__about__.py",
]

[tool.coverage.paths]
pydantic2linkml = ["src/pydantic2linkml", "*/pydantic2linkml/src/pydantic2linkml"]
tests = ["tests", "*/pydantic2linkml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
